# weblog-hunter

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  report.html  requirements-dev.txt  requirements.txt  weblog_hunter.py  weblog_hunter_original.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
docs/: api.md  contributing.md  repository-setup.md  usage.md
examples/sample_reports/: sample_report.json  sample_report.md
tests/: test_analyzer.py  test_integration.py  test_parser.py  test_signatures.py
weblog_hunter/: __init__.py  __main__.py  analyzer.py  config.py  models.py  parser.py  signatures.py
weblog_hunter/reporters/: __init__.py  html.py  json_reporter.py  markdown.py
