[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "weblog-hunter"
version = "2.0.0"
description = "Automated web log reconnaissance and threat hunting tool"
authors = [{name = "Ziya Shalbuzov", email = "z1-ya@users.noreply.github.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Logging",
]
dependencies = [
    "tqdm>=4.65.0",
    "pyyaml>=6.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "black>=23.0.0",
    "ruff>=0.0.260",
    "types-PyYAML>=6.0.0",
]
geoip = ["maxminddb>=2.2.0", "geoip2>=4.6.0"]
threat-intel = ["requests>=2.28.0"]

[project.scripts]
weblog-hunter = "weblog_hunter.__main__:main"

[project.urls]
Homepage = "https://github.com/shalbuzov/weblog-hunter"
Repository = "https://github.com/shalbuzov/weblog-hunter"
Issues = "https://github.com/shalbuzov/weblog-hunter/issues"

[tool.setuptools]
packages = ["weblog_hunter", "weblog_hunter.reporters"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
# Note: mypy requires Python 3.9+ to run, but we can still type-check code targeting 3.8+
# The project supports Python 3.8+, but mypy itself requires 3.9+ to execute
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
pythonpath = ["."]
